--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,46 @@
-/*  your css code here. If applicable */
 body{
 	font-family:Arial,sans-serif;
 	background-color:#f5f5f5;
 }
 header{
-	background-color: #011e29;
-	color:#fff;
+	background-color:#011e29;
+	color:white;
 	text-align:center;
 	padding:10px;
 }
+h1{
+	font-size:16px;
+}
+.container{
+	box-sizing:border-box;
+	position:relative;
+	text-align:center;
+}
 .latest-news-section{
-	vertical-align:top;
-	background-color:white;
 	display:inline-block;
+	background-color:white;
+	vertical-align:top;
 	width:20%;
-	padding:20px;
 	border-radius:20px;
+	padding:20px;
 	
 }
 .hero-section{
-	vertical-align:top;
-	background-color:white;
 	display:inline-block;
+	background-color:white;
 	width:40%;
-	text-align:center;
 	border-radius:20px;
-	padding:20px;
-	
-}
-.Pictorial-News{
 	vertical-align:top;
+	padding:20px;
+}
+.pictorial-news-section{
 	display:inline-block;
 	background-color:white;
 	width:20%;
+	vertical-align:top;
 	padding:20px;
 	border-radius:20px;
-	text-align:center;	
 }
-.container{
-position:relative;
-text-align:center;
-margin-top:10px;
-}
-.pictorial-news-section img{
-margin-top:10px;
+p{
+ text-align:justify;
 }
